test/asm/undefined-opt.err
error: Unknown option 'x'
    at undefined-opt.asm(1)
Assembly aborted with 1 error
